<resources>
    <string name="app_name">FixLeaks</string>
    <string name="distance_value">%d meters</string>
    <string name="submit">Submit</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="leakage_type">Leakage Type:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
</resources>